--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "jane/runtime": "^1.0",
         "symfony/property-access": "^2.3|^3.0",
         "symfony/console": "^2.3|^3.0",
-        "nikic/php-parser": "^1.4|^2.0",
+        "nikic/php-parser": "^1.4|^2.0|^3.0",
         "doctrine/inflector": "^1.0",
         "symfony/options-resolver": "^2.7.2|^3.1"
     },
